tests/errors/PC_out_of_bounds.asm
FUNC LABEL 0
    MOV STK A VAL 9
    MOV REG 0 STK A
    REF STK B STK A
    MOV REG 7 VAL 10
    PRINT PTR B
    CAL VAL 6
    RET
FUNC LABEL 6
    PRINT VAL 9
    PRINT VAL 5
    MOV STK A VAL 1
    PRINT STK A
    RET
